--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.15.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
+    "prisma": "^4.15.0",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2"
   }
 }
