--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.2.5",
+    "typescript": "5.1.3"
   }
 }
