Integrating the add match functionality with backend and also working on the business page

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=mongodb+srv://admin:admin1234@cluster0.osqlxvg.mongodb.net/lace-up?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://admin:admin1234@cluster0.62xf8ox.mongodb.net/lace?retryWrites=true&w=majority
 
 JWT_SECRET=bvdfslbvibifbdnfdifeefe
