Adding somemoore stuff!!

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL=mongodb+srv://admin:admin1234@cluster0.62xf8ox.mongodb.net/lace?retryWrites=true&w=majority
 
 JWT_SECRET=bvdfslbvibifbdnfdifeefe
+
+REACT_APP_OPENAI_API_KEY=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
