--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "axios": "^1.4.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
+    "openai": "^3.2.1",
     "postcss": "8.4.24",
     "prisma": "^4.15.0",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
